--- a/Cryptocurrencies/Cryptocurrencies.csproj
+++ b/Cryptocurrencies/Cryptocurrencies.csproj
@@ -10,7 +10,14 @@
     <ItemGroup>
       <Folder Include="Fonts" />
       <Folder Include="Images" />
-      <Folder Include="MVVM\Model" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0-preview.6.23329.7" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.6.23329.7" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0-preview.6.23329.7" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0-preview.6.23329.7" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
